[tool.poetry]
name = "example"
version = "0.1.0"
description = "A simple example usecase of event_history library."
authors = ["Taj <tjgurwara99@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.0.1"
event_history = { path = "../event_history" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
